--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^8.1.2",
-    "react-router-dom": "6",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.0",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
