--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "mongoose": "^7.5.0",
     "mor": "^0.0.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1"
   },
   "scripts": {
