--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
+    "socket.io-client": "^4.7.4",
     "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.0"
   },
