--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,8 @@
     "nodemon": "^3.0.1"
   },
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "build": "npm i"
   },
   "name": "server",
   "version": "1.0.0",
