--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "starter",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:8000",
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@iconscout/react-unicons": "^1.1.6",
     "@mantine/core": "^4.2.1",
@@ -13,14 +13,17 @@
     "axios": "^0.27.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-input-emoji": "^5.6.6",
-    "react-redux": "^8.1.3",
-    "react-router-dom": "^6.16.0",
+    "react-file-base64": "^1.0.3",
+    "react-input-emoji": "^4.1.0",
+    "react-redux": "^8.0.2",
+    "react-router-dom": "6",
     "react-scripts": "5.0.0",
-    "react-toastify": "^9.1.3",
-    "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2",
-    "socket.io-client": "^4.7.4",
+    "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.1",
+    "socket.io-client": "^4.5.1",
     "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.0"
   },
